logs/sy_exp_00001.err
  File "../exps/sytest.py", line 30
    bn_mode = []
          ^
SyntaxError: invalid syntax
